<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/browseNoteSwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.NoteBrowseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/browseNoteHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="40dp"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:text="@string/header_note_id" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:layout_weight="1"
                android:text="@string/header_note_note" />

            <CheckBox
                android:id="@+id/browseNoteSelectAllCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:text="@string/checked_all"
                android:visibility="gone" />
        </LinearLayout>

        <ListView
            android:id="@+id/browseNoteListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/browseNoteHeaderLayout"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:scrollbarAlwaysDrawVerticalTrack="false" />
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>
